# Conflga

./: .gitignore  CHANGES_SUMMARY.md  LOGGING_README.md  README.md  README.zh-CN.md  pyproject.toml
examples/: decorator_example.py  example_usage.py  quick_start.py
examples/awesome_config/: 00-marcos.toml  01-base_config.toml  02-other_config.toml  base_config.toml
src/conflga/: __init__.py  api.py  cli.py  config.py  console.py  decorator.py  logger.py  manager.py  preprocessor.py
tests/: test_backup.py  test_cli.py  test_config.py  test_decorator.py  test_decorator_method.py  test_logging.py  test_manager.py  test_preprocessor.py  test_pretty_print.py
