[project]
name = "conflga"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "windlx", email = "1418043337@qq.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic[email]>=2.11.7",
    "rich>=14.0.0",
    "rtoml>=0.12.0",
    "typer>=0.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-cov>=6.2.1",
    "pytest>=8.4.1",
]
