[project]
name = "conflga"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "windlx", email = "1418043337@qq.com" }
]
requires-python = ">=3.10"
dependencies = [
    "rtoml>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest-cov>=6.2.1",
    "pytest>=8.4.1",
]
