[project]
name = "conflga"
version = "0.1.0"
description = "A simple TOML-based configuration library with dot-access and merging capabilities."
readme = "README.md"
authors = [
    { name = "windlx", email = "windlxt@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "echoa",
    "rtoml>=0.12.0",
    "simpleeval>=1.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest-cov>=6.2.1",
    "pytest>=8.4.1",
]

[tool.uv.sources]
echoa = { git = "ssh://git@github.com/WindLX/Echoa.git" }
